# P2P-File-Transfer

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/core/: creator.rs  manager.rs  mod.rs  torrent_info.rs  tracker.rs
src/network/: handshake.rs  message.rs  mod.rs
