[package]
name = "p2p-file-transfer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0", default-features = false }
serde_bytes = "0.11"  
serde_bencode = "0.2" 
sha1 = "0.10"         
hex = "0.4"           
rand = "0.8"
url = "2"
reqwest = {version = "0.11",features = ["json"]}
tokio = { version = "1", features = ["full"] }
byteorder = "1.5.0"
walkdir = "2.5.0"
